--- a/EFC2.0/Pages/Organization/Org_Employees/In_Probation.cshtml
+++ b/EFC2.0/Pages/Organization/Org_Employees/In_Probation.cshtml
@@ -48,7 +48,6 @@
                                                             <input type="text" class="grid-search-box" placeholder="Search">
                                                             <mat-icon role="img" class="mat-icon notranslate search-icon material-icons mat-icon-no-color">search</mat-icon>
                                                         </div>
-                                                        <button data-bs-toggle="modal" data-bs-target="#addProbationModal" type="button" class="mat-ripple p-element rd-round-button ng-star-inserted" onclick="addEmployee()" fdprocessedid="jx8e7"><img src="/images/add.svg"></button>
                                                         <button type="button" ptooltip="Download" tooltipposition="top" class="mat-ripple p-element mat-menu-trigger rd-round-button"><img src="/images/download.svg"></button>
                                                     </div>
                                                 </div>
@@ -178,11 +177,13 @@
                                     <mat-card class="mat-card mat-focus-indicator b-shadow-none border-0">
                                         <div class="container-fluid py-2">
                                             <div class="row justify-content-end">
-                                                <div class="col-md-2 d-flex justify-content-end align-items-center tabcol mb-1">
+                                                <div class="col-md-3 d-flex justify-content-end align-items-center tabcol mb-1">
                                                     <div style="position: relative;">
                                                         <input type="text" class="grid-search-box" placeholder="Search">
                                                         <mat-icon role="img" class="mat-icon notranslate search-icon material-icons mat-icon-no-color">search</mat-icon>
-                                                    </div><button type="button" ptooltip="Download" tooltipposition="top" class="mat-ripple p-element mat-menu-trigger rd-round-button"><img src="/images/download.svg"></button>
+                                                    </div>
+                                                    <button data-bs-toggle="modal" data-bs-target="#addProbationModal" type="button" class="mat-ripple p-element rd-round-button ng-star-inserted" onclick="addEmployee()" fdprocessedid="jx8e7"><img src="/images/add.svg"></button>
+                                                    <button type="button" ptooltip="Download" tooltipposition="top" class="mat-ripple p-element mat-menu-trigger rd-round-button"><img src="/images/download.svg"></button>
                                                 </div>
                                             </div>
                                         </div>
