--- a/EFC2.0/Pages/Organization/Org_Structure/salary_Structure.cshtml
+++ b/EFC2.0/Pages/Organization/Org_Structure/salary_Structure.cshtml
@@ -16,7 +16,7 @@
                 </ul>
                 <div class="container-fluid p-3">
                     <div class="grand-child nav-active-top">
-                        <div id="employeeDetailPage" class="ng-star-inserted">
+                        <div class="ng-star-inserted">
                             <div class="page-title-h">
                                 <div class="d-flex justify-content-start align-items-center">
                                     <mat-icon role="img" class="mat-icon notranslate text-muted material-icons mat-icon-no-color" style="cursor: pointer;">chevron_left </mat-icon>
@@ -24,7 +24,7 @@
                                 </div>
                             </div>
                             <mat-card class="mat-card mat-focus-indicator b-shadow-none border-0">
-                                <div class="container-fluid py-2">
+                                <div class="container-fluid py-0">
                                     <div class="row align-items-end  justify-content-between">
                                         <div class="col-md-9 tab-col-width2">
                                             <div class="row align-items-end">
@@ -66,8 +66,8 @@
                                                 <mat-icon role="img" class="mat-icon notranslate search-icon material-icons mat-icon-no-color">search</mat-icon>
                                             </div>
                                             <button type="button" class="mat-ripple p-element rd-round-button ng-star-inserted" tabindex="0"><img src="/images/upload_file.svg"></button>
-                                            <button data-bs-toggle="modal" data-bs-target="#addProbationModal" type="button" class="mat-ripple p-element rd-round-button ng-star-inserted" onclick="addEmployee()" fdprocessedid="jx8e7"><img src="/images/add.svg"></button>
-                                            <button type="button" ptooltip="Download" tooltipposition="top" class="mat-ripple p-element mat-menu-trigger rd-round-button" fdprocessedid="y4nnuv"><img src="/images/download.svg"></button>
+                                            <button data-bs-toggle="modal" data-bs-target="#addSalaryStructureModal" type="button" class="mat-ripple p-element rd-round-button ng-star-inserted"><img src="/images/add.svg"></button>
+                                            <button type="button" ptooltip="Download" tooltipposition="top" class="mat-ripple p-element mat-menu-trigger rd-round-button"><img src="/images/download.svg"></button>
                                         </div>
                                     </div>
                                     <div class="col-12 px-0">
@@ -182,6 +182,90 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="addSalaryStructureModal">
+    <div class="modal-dialog efcModal efcMaxModal">
+        <div class="modal-content">
+            <div class="rd-dialog-heading p-0">
+                Add Salary Structure
+            </div>
+            <div class="row">
+                <div class="col-md-6 rd-form-select my-1">
+                    <label class="rd-form-select-label mb-1">Name *</label>
+                    <input type="text" class="form-control" placeholder="Enter Name" />
+                </div>
+                <div class="col-md-6 rd-form-select my-1">
+                    <label class="rd-form-select-label mb-1">Legal Entity*</label>
+                    <select class="form-select" placeholder="Select Legal Entity">
+                        <option selected>Select Employee Type</option>
+                        <option value="1">1</option>
+                    </select>
+                </div>
+                <div class="col-md-6 rd-form-select my-1">
+                    <label class="rd-form-select-label mb-1">Department*</label>
+                    <select class="form-select" placeholder="Select Department">
+                        <option selected>Select Employee Type</option>
+                        <option value="1">1</option>
+                    </select>
+                </div>
+                <div class="col-md-6 rd-form-select my-1">
+                    <label class="rd-form-select-label mb-1">Designation*</label>
+                    <select class="form-select" placeholder="Select Designation">
+                        <option selected>Select Employee Type</option>
+                        <option value="1">1</option>
+                    </select>
+                </div>
+                <div class="col-md-12 my-2">
+                    <div>
+                        <label class="rd-form-select-label mb-2 me-2"><input type="radio" id="1" class="form-check-input" name="radioboxName">  <span> Amount based </span></label>
+                        <label class="rd-form-select-label mb-2 me-2"><input type="radio" id="1" class="form-check-input" name="radioboxName">  <span> Percent based  </span></label>
+                        <label class="rd-form-select-label mb-2 me-2"><input type="radio" id="1" class="form-check-input" name="radioboxName">  <span> Both </span></label>
+                    </div>
+                </div>
+                <h4>Salary Components :</h4>
+                <div class="col-md-4">
+                    <div class="rd-form-select my-1">
+                        <label class="rd-form-select-label mb-1">Basic Salary *</label>
+                        <input type="text" class="form-control" value="0" placeholder="Enter Basic Salary" />
+                        <label class="rd-form-select-label d-flex justify-content-end mt-1">Fixed Monthly</label>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="rd-form-select my-1">
+                        <label class="rd-form-select-label mb-1">LTA *</label>
+                        <input type="text" class="form-control" value="0" placeholder="Enter LTA" />
+                        <label class="rd-form-select-label d-flex justify-content-end mt-1">Fixed Monthly</label>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="rd-form-select my-1">
+                        <label class="rd-form-select-label mb-1">House Rent Allowance *</label>
+                        <input type="text" class="form-control" value="0" placeholder="Enter House Rent Allowance" />
+                        <label class="rd-form-select-label d-flex justify-content-end mt-1">Fixed Monthly</label>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="rd-form-select my-1">
+                        <label class="rd-form-select-label mb-1">Conveyance Allowance  *</label>
+                        <input type="text" class="form-control" value="0" placeholder="Enter Conveyance Allowance" />
+                        <label class="rd-form-select-label d-flex justify-content-end mt-1">Fixed Monthly</label>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="rd-form-select my-1">
+                        <label class="rd-form-select-label mb-1">City Compensatory *</label>
+                        <input type="text" class="form-control" value="0" placeholder="Enter City Compensatory" />
+                        <label class="rd-form-select-label d-flex justify-content-end mt-1">Fixed Monthly</label>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer mt-2">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </div>
