--- a/EFC2.0/Pages/Organization/Org_Structure/work_Location.cshtml
+++ b/EFC2.0/Pages/Organization/Org_Structure/work_Location.cshtml
@@ -16,7 +16,7 @@
                 </ul>
                 <div class="container-fluid p-3">
                     <div class="grand-child nav-active-top">
-                        <div id="employeeDetailPage" class="ng-star-inserted">
+                        <div class="ng-star-inserted">
                             <div class="page-title-h">
                                 <div class="d-flex justify-content-start align-items-center">
                                     <mat-icon role="img" class="mat-icon notranslate text-muted material-icons mat-icon-no-color" style="cursor: pointer;">chevron_left </mat-icon>
@@ -26,15 +26,15 @@
                                 </div>
                             </div>
                             <mat-card class="mat-card mat-focus-indicator b-shadow-none border-0">
-                                <div class="container-fluid py-2">
+                                <div class="container-fluid py-0">
                                     <div class="d-flex justify-content-end tabcol mb-1">
                                         <div style="position: relative;">
                                             <input type="text" class="grid-search-box" placeholder="Search" fdprocessedid="xdmbl">
                                             <mat-icon role="img" class="mat-icon notranslate search-icon material-icons mat-icon-no-color">search</mat-icon>
                                         </div>
                                         <button type="button" class="mat-ripple p-element rd-round-button ng-star-inserted" tabindex="0"><img src="/images/upload_file.svg"></button>
-                                        <button data-bs-toggle="modal" data-bs-target="#addProbationModal" type="button" class="mat-ripple p-element rd-round-button ng-star-inserted" onclick="addEmployee()" fdprocessedid="jx8e7"><img src="/images/add.svg"></button>
-                                        <button type="button" ptooltip="Download" tooltipposition="top" class="mat-ripple p-element mat-menu-trigger rd-round-button" fdprocessedid="g20k8k"><img src="/images/download.svg"></button>
+                                        <button data-bs-toggle="modal" data-bs-target="#addWorkLocationModal" class="mat-ripple p-element rd-round-button ng-star-inserted"><img src="/images/add.svg"></button>
+                                        <button type="button" ptooltip="Download" tooltipposition="top" class="mat-ripple p-element mat-menu-trigger rd-round-button"><img src="/images/download.svg"></button>
                                     </div>
                                     <div class="col-12 px-0">
                                         <div class="ng-star-inserted">
@@ -160,6 +160,70 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="addWorkLocationModal">
+    <div class="modal-dialog efcModal efcMaxModal">
+        <div class="modal-content">
+            <div class="rd-dialog-heading p-0">
+                Add Work location
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="rd-form-select my-1">
+                        <label class="rd-form-select-label mb-1">Name *</label>
+                        <input type="text" class="form-control" placeholder="Enter Name" />
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="rd-form-select my-1">
+                        <label class="rd-form-select-label mb-1">Location Head*</label>
+                        <select class="form-select" placeholder="Select Location Head">
+                            <option selected>Select Employee Type</option>
+                            <option value="1">1</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="rd-form-select my-1">
+                        <label class="rd-form-select-label mb-1">Description *</label>
+                        <textarea type="text" class="form-control" placeholder="Enter Description"></textarea>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="rd-form-select my-1">
+                        <label class="rd-form-select-label mb-1">Country*</label>
+                        <select class="form-select" placeholder="Country">
+                            <option selected>Select Title</option>
+                            <option value="1">1</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="rd-form-select my-1">
+                        <label class="rd-form-select-label mb-1">State*</label>
+                        <select class="form-select" placeholder="State">
+                            <option selected>Select Title</option>
+                            <option value="1">1</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <label class="rd-form-select-label mb-1">Address*</label>
+                    <textarea type="file" class="form-control" placeholder="Enter Address"></textarea>
+                </div>
+                <div class="col-md-4 my-3">
+                    <div>
+                        <label class="rd-form-select-label mb-2"><input type="checkbox" id="1" class="form-check-input" name="checkboxName">  <span class="fw-600" style="font-size:12px;line-height:20px;">Announce Work Location Head Change?  </span></label>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer mt-2">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </div>
